<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/register_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center"
        android:textSize="18sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:text="@string/register"
            android:textColor="@android:color/black"
            android:textSize="17sp" />

    </android.support.v7.widget.Toolbar>


    <include layout="@layout/view_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="30dp">

        <EditText
            android:id="@+id/register_et_sid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/sid_32"
            android:drawableLeft="@drawable/sid_32"
            android:drawablePadding="15dp"
            android:hint="@string/account"
            android:inputType="number"
            android:maxLength="12"
            android:maxLines="1" />

        <EditText
            android:id="@+id/register_et_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/pwd_32"
            android:drawableLeft="@drawable/pwd_32"
            android:drawablePadding="15dp"
            android:hint="@string/password"
            android:inputType="text"
            android:maxLength="16"
            android:maxLines="1" />

        <EditText
            android:id="@+id/register_et_qq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/qq"
            android:drawableLeft="@drawable/qq"
            android:drawablePadding="15dp"
            android:hint="@string/qq"
            android:inputType="number"
            android:maxLength="10"
            android:maxLines="1" />

        <EditText
            android:id="@+id/register_et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/phone"
            android:drawableLeft="@drawable/phone"
            android:drawablePadding="15dp"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:maxLength="11"
            android:maxLines="1" />

        <TextView
            android:id="@+id/register_tv_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawableStart="@drawable/location"
            android:drawableLeft="@drawable/location"
            android:drawableEnd="@drawable/triangle_32"
            android:drawableRight="@drawable/triangle_32"
            android:drawablePadding="15dp"
            android:focusable="true"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:hint="@string/location"
            android:textColor="#acac8a"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:background="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">


            <CheckBox
                android:id="@+id/register_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true" />

            <TextView
                android:id="@+id/register_tv_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agreement"
                android:textColor="#2d9fd4" />

        </LinearLayout>

        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="20dp"
            android:background="@drawable/app_login_btn_shape"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ProgressBar
            android:id="@+id/register_pb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:visibility="gone" />


    </LinearLayout>


</LinearLayout>