<?xml version="1" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:ignoreGravity="@id/login_pb">

    <ProgressBar
        android:layout_marginTop="10dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/login_pb"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:hint="@string/account">

        <EditText
            android:id="@+id/login_et_sid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/app_login_account"
            android:drawableLeft="@drawable/app_login_account"
            android:drawablePadding="14dp"
            android:inputType="number"
            android:maxLength="12"
            android:maxLines="1"
            android:paddingLeft="100dp"
            android:paddingEnd="100dp"
            android:paddingRight="100dp"
            android:paddingBottom="16dp"
            android:textColor="#ff222222"
            android:textColorHint="@color/system_assist_text"
            android:textSize="17sp"
            android:theme="@style/MyEditText" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_yzm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_account"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="36dp"
        android:hint="@string/password">

        <EditText
            android:id="@+id/login_et_pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/app_login_password"
            android:drawableLeft="@drawable/app_login_password"
            android:drawablePadding="14dp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:maxLength="16"
            android:paddingLeft="80dp"
            android:paddingEnd="80dp"
            android:paddingRight="80dp"
            android:paddingBottom="16dp"
            android:textColor="#ff222222"
            android:textColorHint="@color/system_assist_text"
            android:textSize="17sp"
            android:theme="@style/MyEditText" />
    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_yzm"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/login_cb_rememberPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_pwd"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/login_tv_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/register"
            android:textAlignment="center"
            android:textColor="#ff1c86ee"
            android:textSize="14sp" />

        <TextView

            android:id="@+id/login_tv_forgetpwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:paddingTop="8dp"
            android:text="@string/retrieve_pwd"
            android:textAlignment="center"
            android:textColor="#ff1c86ee"
            android:textSize="14sp" />


    </LinearLayout>


    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/ll"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="36dp"
        android:background="@drawable/app_login_btn_shape"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

</RelativeLayout>