<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.MineFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/mine_btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/edit"
            android:textColor="#fc7d05" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#fcf8f8" />


        <RelativeLayout
            android:id="@+id/mime_rl_my_post"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/select_bar_item"
            android:clickable="true"
            android:focusable="true"
            android:padding="10dp">

            <ImageView
                android:id="@+id/mine_iv_head"
                android:layout_width="95dp"
                android:layout_height="95dp" />

            <TextView
                android:layout_marginLeft="5dp"
                android:id="@+id/mine_tv_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/mine_iv_head"
                android:layout_toRightOf="@id/mine_iv_head"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                tools:text="昵称" />

            <TextView
                android:id="@+id/mine_tv_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/mine_tv_nickname"
                android:layout_alignParentBottom="true"
                android:layout_toEndOf="@id/mine_iv_head"
                android:layout_toRightOf="@id/mine_iv_head"
                tools:text="发布数:0" />


            <TextView
                android:id="@+id/mine_tv_need"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_toEndOf="@id/mine_tv_post"
                android:layout_toRightOf="@id/mine_tv_post"
                tools:text="求购数:0" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:contentDescription="@null"
                android:src="@drawable/arrow_32" />

        </RelativeLayout>


    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="#fcf8f8" />


    <TextView
        android:id="@+id/mine_tv_settings"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/select_bar_item"
        android:clickable="true"
        android:drawableStart="@drawable/settings"
        android:drawableLeft="@drawable/settings"
        android:drawableEnd="@drawable/arrow_16"
        android:drawableRight="@drawable/arrow_16"
        android:drawablePadding="10dp"
        android:focusable="true"
        android:gravity="center_vertical"
        android:text="@string/settings" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#fcf8f8" />

    <TextView
        android:id="@+id/mine_tv_about"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/select_bar_item"
        android:clickable="true"
        android:drawableStart="@drawable/about"
        android:drawableLeft="@drawable/about"
        android:drawableEnd="@drawable/arrow_16"
        android:drawableRight="@drawable/arrow_16"
        android:drawablePadding="10dp"
        android:focusable="true"
        android:gravity="center_vertical"
        android:text="@string/about" />


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#fcf8f8" />

    <Button
        android:id="@+id/mine_btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
         android:layout_margin="10dp"
        android:background="@drawable/app_logout_btn_shape"
        android:text="@string/logout"
        android:textColor="@android:color/black"
        android:textSize="18sp" />


</LinearLayout>